apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: test-app
